syntax = "proto3";

package sirsi.admin.v1;

option go_package = "github.com/sirsimaster/sirsi-admin-service/gen/go/proto/admin/v1";

service AdminService {
  // Estate Management
  rpc ListEstates(ListEstatesRequest) returns (ListEstatesResponse);
  rpc GetEstate(GetEstateRequest) returns (Estate);
  
  // Development & Session Logging
  rpc LogDevSession(LogDevSessionRequest) returns (LogDevSessionResponse);
  
  // User & Access Control
  rpc ManageUserRole(ManageUserRoleRequest) returns (ManageUserRoleResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // Notifications
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
  rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse);

  // System Settings
  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse);
  rpc UpdateSettings(UpdateSettingsRequest) returns (UpdateSettingsResponse);

  // Audit & Logging
  rpc ListAuditTrail(ListAuditTrailRequest) returns (ListAuditTrailResponse);
}

message Estate {
  string id = 1;
  string name = 2;
  string owner_name = 3;
  string status = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message ListEstatesRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListEstatesResponse {
  repeated Estate estates = 1;
  string next_page_token = 2;
}

message GetEstateRequest {
  string id = 1;
}

message LogDevSessionRequest {
  string developer_id = 1;
  string action = 2;
  string metadata = 3; // JSON
}

message LogDevSessionResponse {
  string session_id = 1;
}

message ManageUserRoleRequest {
  string user_id = 1;
  string role = 2;
}

message ManageUserRoleResponse {
  bool success = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}

message ListUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
}

message SendNotificationRequest {
  string recipient_id = 1; // "all" for broadcast
  string title = 2;
  string body = 3;
  string type = 4; // info, success, warning, error
  string channel = 5; // push, in_app, email
}

message SendNotificationResponse {
  string notification_id = 1;
}

message ListNotificationsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListNotificationsResponse {
  repeated Notification notifications = 1;
  string next_page_token = 2;
}

message Notification {
  string id = 1;
  string recipient_id = 2;
  string title = 3;
  string body = 4;
  string type = 5;
  int64 sent_at = 6;
  string status = 7;
}

message SystemSettings {
  bool maintenance_mode = 1;
  string active_region = 2;
  double sirsi_multiplier = 3;
}

message GetSettingsRequest {}

message GetSettingsResponse {
  SystemSettings settings = 1;
}

message UpdateSettingsRequest {
  SystemSettings settings = 1;
}

message UpdateSettingsResponse {
  bool success = 1;
}

message ListAuditTrailRequest {
  int32 page_size = 1;
  string page_token = 2;
  string filter_level = 3; // ALL, SECURITY, ERROR etc
}

message ListAuditTrailResponse {
  repeated AuditLogEntry logs = 1;
  string next_page_token = 2;
}

message AuditLogEntry {
  string id = 1;
  int64 timestamp = 2;
  string level = 3;
  string source = 4;
  string message = 5;
  string user = 6;
  string metadata = 7;
}
